# Qonvince

./: .clang-format  .gitignore  CMakeLists.txt  Qonvince.pro  README.md  common.pri  icons.qrc  libqonvince.pri  test_base32.cpp  todo.txt
libqonvince/: CMakeLists.txt  libqonvince.pro
libqonvince/src/: base32.h  otpdisplayplugin.cpp  otpdisplayplugin.h  plugininfo.h  securestring.h  sharedlibrary.cpp  sharedlibrary.h
plugins/: CMakeLists.txt  plugins.pro
plugins/otpdisplay/: CMakeLists.txt  otpdisplay.pro
plugins/otpdisplay/integer/: CMakeLists.txt  integer.pro
plugins/otpdisplay/integer/eightdigits/: CMakeLists.txt  eightdigits.pro
plugins/otpdisplay/integer/eightdigits/src/: eightdigits.cpp  eightdigits.h
plugins/otpdisplay/integer/sixdigits/: CMakeLists.txt  sixdigits.pro
plugins/otpdisplay/integer/sixdigits/src/: sixdigits.cpp  sixdigits.h
plugins/otpdisplay/integer/src/: eightdigits.cpp  eightdigits.h  integercodedisplaystring.h  integerdisplayplugin.h  integerdisplaypluginbase.h  sixdigits.cpp  sixdigits.h
plugins/otpdisplay/steam/: CMakeLists.txt  steam.pro
plugins/otpdisplay/steam/src/: steam.cpp  steam.h
qonvince/: CMakeLists.txt  qonvince.pro
qonvince/resources/: icons.qrc
qonvince/resources/icons/codeactions/: .directory
qonvince/scratch/base32/: test_base32.cpp
qonvince/src/: aboutdialogue.cpp  aboutdialogue.h  algorithms.h  application.cpp  application.h  base32.cpp  base32.h  changepassphrasedialogue.cpp  changepassphrasedialogue.h  crypt.h  functions.cpp  functions.h  iconselectbutton.cpp  iconselectbutton.h  integerotpdisplayplugin.cpp  integerotpdisplayplugin.h  jsonserialisable.h  libqrencode.cpp  libqrencode.h  main.cpp  main.cpp.orig  mainwindow.cpp  mainwindow.h  otp.cpp  otp.h  otpcodeitemdelegate.cpp  otpcodeitemdelegate.h  otpdisplayplugin.cpp  otpdisplayplugin.h  otpdisplaypluginchooser.cpp  otpdisplaypluginchooser.h  otpeditor.cpp  otpeditor.h  otpeditordialogue.cpp  otpeditordialogue.h  otplistitemactionbuttons.cpp  otplistitemactionbuttons.h  otplistitemdelegate.cpp  otplistitemdelegate.h  otplistmodel.cpp  (+33 more)
qonvince/ui/: aboutdialogue.ui  changepassphrasedialogue.ui  iconselectbutton.ui  mainwindow.ui  otpeditor.ui  otpeditordialogue.ui  passphrasedialogue.ui  passworddialogue.ui  settingswidget.ui
src/: aboutdialogue.cpp  aboutdialogue.h  algorithms.h  application.cpp  application.h  base32.cpp  base32.h  crypt.cpp  crypt.h  iconselectbutton.cpp  iconselectbutton.h  integerotpcodedisplayplugin.h  integerotpdisplayplugin.cpp  integerotpdisplayplugin.h  libqrencode.cpp  libqrencode.h  main.cpp  mainwindow.cpp  mainwindow.h  otp.cpp  otp.h  otpcodeitemdelegate.h  otpdisplayplugin.h  otpeditor.cpp  otpeditor.h  otplistwidget.cpp  otplistwidget.h  otplistwidgetitem.cpp  otplistwidgetitem.h  otpqrcodereader.cpp  passworddialogue.cpp  passworddialogue.h  passwordwidget.cpp  passwordwidget.h  qrcodecreator.cpp  qrcodecreator.h  qrcodereader.cpp  qrcodereader.h  settings.cpp  settingswidget.cpp  (+5 more)
test/: CMakeLists.txt  test.pro  test_common.pri
test/algorithms/: algorithms.pro
test/algorithms/src/: algorithms.cpp  stringcase.cpp
test/base32/: base32.pro
test/base32/src/: base32.cpp
ui/: otpeditor.ui  passworddialogue.ui  passwordwidget.ui  settingswidget.ui
